--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+     <meta name="google-site-verification" content="gaTV443P56g44bWQVg1NEWm2sRt31qJDzmp7Jw9Coyw" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public\images (7).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
